src/index.css
* {
  scrollbar-width: none;
}

body {
  height: 100vh;
  width: 100vw;
  font-family: system-ui, Helvetica, Arial, sans-serif;
  margin: 0;
  background: linear-gradient(285deg, rgba(0, 14, 15, 1) 0%, rgba(0, 33, 36, 1) 27%, rgba(0, 33, 36, 1) 77%, rgba(0, 14, 15, 1) 100%);
  overflow-x: hidden;
}

nav {
  height: 10vh;
  opacity: 85%;
}

h1,
h2 {
  color: #FCFCFC;
  width: 100%;
  text-align: center;
}

li {
  list-style-type: none;
}

img {
  color: #BABABA;
}

.flex {
  display: flex;
}

.justify-center {
  justify-content: center;
}

.justify-evenly {
  justify-content: space-evenly;
}

.align-center {
  align-items: center;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-wrap {
  flex-wrap: wrap;
}

.resetPasswordLinkContainer {
  text-align: center;
}

.passwordResetSuccess {
  color: #A8A8A8;
}

.passwordResetLink {
  text-decoration: none;
  font-size: 16px;
  text-align: center;
  color: #A8A8A8;
}

.passwordResetLink:hover {
  color: #FCFCFC;
}

.navLink {
  height: 60%;
}

.accountContainer {
  height: 80vh;
}

.formGlobal {
  padding: 0 10%;
}

.w-100 {
  width: 100%;
}

.h-100 {
  height: 100%;
}

.w-10 {
  width: 10%;
}

.textInputContainer {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.textInputLabel {
  width: 100%;
  font-size: 16px;
  margin: 5px 0;
  color: #A8A8A8;
}

.textInput,
.searchTextInput {
  font-size: 16px;
  text-indent: 5px;
  width: 100%;
  height: 42.6px;
  background-color: #1C3A3B;
  color: #BABABA;
  border: none;
  border-bottom: solid 3px transparent;
  padding: 0;
}

.textInput {
  margin-bottom: 30px;
  border-radius: 5px 5px 0px 0px;
}

.searchTextInput {
  border-radius: 10px 0 0 10px;
}

.searchSortContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.invalidFormat {
  border-color: red;
}

.textInput:focus-visible,
.searchTextInput:focus-visible {
  outline: none;
  border-bottom: solid 3px #BABABA;
}

.textInput::placeholder {
  font-size: 16px;
  color: #8e8e8e;
}

.gallerySearch {
  width: 100%;
  height: 10vh;
}

.btn {
  font-size: 16px;
  padding: 0 15px;
  width: 100%;
  height: 45px;
  margin: 30px 0;
  border-radius: 25px;
  border: none;
}

.btnTransparent {
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: none;
}

.btnOutline {
  background: transparent;
  border: solid 3px #16C057;
  color: #16C057;
}

.btnDisabled {
  border-color: #004C54;
  color: #004C54;
  pointer-events: none;
}

.countButton {
  height: 100%;
  box-sizing: border-box;
}

.searchButton {
  height: 45px;
  width: 55px;
  border: solid 3px #16C057;
  border-radius: 0 10px 10px 0;
  box-sizing: border-box;
}

.searchButton:hover,
.btnOutline:hover,
.countButton:hover {
  background-color: #16C057;
  color: #002124;
}

.buttonIcon,
.exposedIcon,
.currentPageIcon,
.starIcon {
  stroke: #16C057;
}

.starIcon {
  fill: none;
}

.exposedIcon,
.starTrue {
  fill: #16C057;
}

.currentPageIcon * {
  fill: #16C057;
}

.currentPageIcon #currentPageID {
  stroke: #002124;
  fill: #002124;
}

.currentPageIcon:hover * {
  stroke: #0293a3;
  fill: #0293a3;
}

.starIcon:hover {
  stroke: #0293a3;
}

.exposedIcon:hover,
.currentPageIcon:hover,
.starTrue:hover {
  stroke: #0293a3;
  fill: #0293a3;
}

.buttonIcon:hover {
  stroke: #002124;
}

.countButtonRight {
  border-left: solid 3px #16C057;
}

.countButtonLeft {
  border-right: solid 3px #16C057;
}

.cardActionsButton {
  height: 100%;
}

.modalToggleButton {
  width: 60px;
}

.cardsList {
  width: 90%;
  padding: 5% 0;
  gap: 5%;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.cardContainerSmall {
  width: 25%;
  margin-bottom: 5%;
}

.sortFilterModal {
  width: 100vw;
  position: fixed;
  z-index: 2;
  bottom: 0;
  left: 0;
  backdrop-filter: blur(5px);
}

.sortFilterModalSearch {
  height: 70vh;
}

.sortFilterModalGallery {
  height: 80vh;
}

.modalContentContainer {
  background: linear-gradient(285deg, rgba(0, 14, 15, 1) 0%, rgba(0, 33, 36, 1) 27%, rgba(0, 33, 36, 1) 77%, rgba(0, 14, 15, 1) 100%);
  width: 100%;
  height: 100%;
  border-radius: 20px 20px 0 0;
  overflow: auto;
}

.modalContentInnerContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  overflow-y: scroll;
  margin: 0 5%;
}

.modalSection {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.dropdownContainer {
  width: 100%;
}

.dropdownButton {
  font-size: 16px;
  padding: 0 15px;
  width: 100%;
  height: 45px;
  box-sizing: border-box;
  border-radius: 10px;
}

.dropdownClosed {
  margin-bottom: 5%;
}

.dropdownListContainer {
  z-index: 4;
  left: 0;
  width: 100%;
  margin-bottom: 5vh;
  overflow: hidden;
  backdrop-filter: blur(10px);
}

.dropdownList {
  list-style-type: none;
  padding: 0;
  overflow-y: scroll;
}

.dropdownListItem {
  width: 100%;
  height: 45px;
  margin-bottom: 1.5px;
  font-size: 16px;
  color: #BABABA;
  border-radius: 5px;
}

.dropdownListItemLabel {
  display: flex;
  justify-content: center;
  align-items: center;
}

.dropdownChecked {
  background-color: #004C54;
}

.dropdownUnchecked {
  background-color: #1C3A3B;
}

.hiddenCheckbox {
  opacity: 0;
  width: 0;
  height: 35px;
}

.cardModal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 2;
  background-color: #002124;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.cardCountContainer,
.cardActionsContainer {
  width: 100%;
  max-width: 300px;
  height: 45px;
  display: flex;
  align-items: center;
  margin: 0;
}

.cardCountContainer {
  color: #16C057;
  font-size: 16px;
  font-weight: bold;
  border: solid 3px #16C057;
  border-radius: 10px;
}

.cardModalContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  padding: 15px;
  box-sizing: border-box;
  gap: 0.5rem;
}

.cardContainerLarge {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 300px;
  width: 100%;
}

.cardImage,
.cardImageSmall {
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
}

.cardImage {
  border-radius: 10px;
}

.cardImageSmall {
  border-radius: 3px;
}

.cardActionsContainer,
.cardCountContainer {
  height: 45px;
  width: 100%;
  max-width: 300px;
  display: flex;
  justify-content: space-between;
}

.searchPageContentContainer,
.searchFormatSelector {
  width: 100%;
}

.searchPageContainer {
  padding: 0 5%;
}

.searchFormatSelector {
  margin: 20px 0;
}

.searchFormatID,
.searchFormatName {
  font-size: 16px;
  padding: 0 15px;
  width: 100%;
  height: 45px;
  box-sizing: border-box;
  font-weight: bold;
  background: transparent;
  border: solid 3px #16C057;
  color: #16C057;
}

.searchFormatButtonActive {
  background-color: #16C057;
  color: #002124;
}

.searchFormatID:hover,
.searchFormatName:hover {
  background-color: #0293a3;
  border-color: #0293a3;
  color: #002124;

}

.searchFormatID {
  border-radius: 0 10px 10px 0;
}

.searchFormatName {
  border-radius: 10px 0 0 10px;
}

.PokeBallAnimationContainer {
  animation: PokeBallAnimation 2s infinite;
}

.cardUpdateErrorContainer {
  width: 100%;
  min-height: 10vh;
  position: fixed;
  bottom: 0;
  display: flex;
  flex-wrap: wrap;
  background-color: #1C3A3B;
}

.closeCardUpdateError {
  height: 5vh;
  width: 100%;
  display: flex;
  justify-content: end;
  align-items: center;
}

.cardUpdateError p {
  margin-top: 0;
}

.errorText {
  padding: 0 5%;
  color: #BABABA;
}

@keyframes PokeBallAnimation {
  0% {
    transform: rotate(0deg);
  }

  25% {
    transform: rotate(-45deg);
  }

  50% {
    transform: rotate(0deg);
  }

  75% {
    transform: rotate(45deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

@media only screen and (min-width: 400px) {
  .formGlobal {
    width: 320px;
  }
}

@media only screen and (min-width: 450px) {
  .cardsList {
    max-height: 70vh;
    overflow-y: scroll;
  }

  .modalSection {
    width: 370px;
  }

  .searchPageContainer {
    width: 370px;
    margin: auto;
  }
}


@media only screen and (min-width: 600px) {
  .cardContainerSmall {
    width: 135px;
  }

  .modalToggleButton {
    width: 80px;
  }

  .searchInput {
    width: 540px;
    margin: 5% auto;
  }

  .cardModalContainer {
    padding: 30px;
  }
}

@media only screen and (min-width: 800px) {
  .modalSection {
    margin: 0 5%;
  }
}

@media only screen and (min-width: 900px) {
  .autoCompleteInput:hover {
    background-color: #ebebeb;
  }

  .btnOutlinehover:hover {
    border: solid 3px #FCFCFC;
    color: #FCFCFC;
  }

  .dropdownListItem:hover {
    border: solid 3px #BABABA;
    box-sizing: border-box;
  }

  .textInput:hover {
    border-color: #BABABA;
  }

  .modalContentInnerContainer {
    justify-content: space-evenly;
  }

  .searchTextInput,
  .dropdownButton {
    margin: 0;
  }

  .dropdownContainer,
  .textInputContainer,
  .formGlobal {
    width: 370px;
  }

  .modalFilter,
  .searchSortContainer {
    width: 777px;
    margin: 0;
    margin-top: 5%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .modalSearch,
  .modalSort {
    margin: 0;
    display: flex;
  }

  .modalSearch {
    height: fit-content;
  }

  .modalSection,
  .searchSortContainer {
    align-content: start;
  }

  .dropdownListContainer {
    margin-bottom: 15vh;
  }

  .cardModalContainer {
    padding: 45px;
  }
}

@media only screen and (min-width: 1000px) {
  .cardsList {
    width: 900px;
  }

  .cardModalContainer {
    padding: 50px;
  }
}

@media only screen and (min-width: 1200px) {
  .cardModalContainer {
    padding: 60px;
  }
}

